Fix a few bugs and make a few improvements to design: 	- Fix bug about remember me checkbox not being aligned with text 	- Fix bug with the white line in the bottom of every rendered page 	- Fix bug where signup and login buttons weren't aligned 	- Fix bug where next and register buttons were in wrong position 	- Make declaration table pretty 	- Colors on "Step X of 4" text 	- Make orange the hyperlinks in style_intro

--- a/media/style.css
+++ b/media/style.css
@@ -1,4 +1,6 @@
-body { overflow-x: hidden; }
+body { overflow-x: hidden; background: #f5f5f5; }
+
+th { color: #786721; width: 280px; }
 
 #container {
 	width: 100%; min-height: 100%; position: absolute;
@@ -186,4 +188,3 @@ body { overflow-x: hidden; }
 }
 #content .rss-promo a:hover, #content .rss-promo a:focus { border: 0; color: #B38600; }
 #content .rss-promo p { color: #786721; }
-
